# structured-agents-v2

./: .gitattributes  .gitignore  .tmuxp.yaml  CODE_REVIEW_FINAL_REFACTOR_GUIDE.md  LICENSE  README.md  devenv.nix  flake.nix  pyproject.toml  result
.scratch/: CRITICAL_RULES.md  REPO_RULES.md
.scratch/projects/01-xgrammar-concept/: STRUCTURED_AGENT_CONCEPT.md
.scratch/projects/02-library-wrapper/: CONCEPT.md  PHASE_2_KICKOFF.md  VERIFICATION.md  spike_output_types.py
.scratch/projects/03-dual-path/: CONCEPT.md  RESEARCH_KICKOFF.md
.scratch/projects/04-dual-path-runtime/: PHASE_2_KICKOFF.md
.scratch/projects/05-small-model-survey/: REPORT.md
.scratch/projects/05-vllm-tailscale-deployment/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  KICKOFF_PROMPT.md  PLAN.md  PROGRESS.md
.scratch/projects/06-pydanticai-usage-compatibility/: ISSUE.md
.scratch/projects/07-library-code-review/: CODE_REVIEW.md
.scratch/projects/07-sglang-gguf-spike/: PROMPT.md
.scratch/projects/08-unsloth-gemma4-gguf-compatibility/: ANALYSIS.md  EXPERTS_IMPLEMENTATION_KICKOFF_PROMPT.md  KICKOFF_PROMPT.md  METADATA_REPORT.md  MINIMAL_REPRODUCTION.md  NEXT_BUILD_PROMPT.md
.scratch/projects/09-constraint-codec-rewrite/: 00-PLAN.md  CONCEPT.md  DECISIONS.md  DESIGN.md  DESIGN_DURABLE.md  DURABLE_PLANE.md  PHASES.md  PHASES_DURABLE.md  PLANNING_KICKOFF.md  REVIEW.md  REVIEW_KICKOFF.md  RISKS.md  SALVAGE.md  SIMPLIFIED.md  SPIKES.md  TESTS.md
.scratch/projects/09-structured-agents-v2-code-review/: CODE_REVIEW.md
.scratch/projects/10-durable-agent-plane-build/: BUILD_KICKOFF.md  RESEARCH_REPORT.md
.scratch/projects/11-sglang-provider-abstraction/: ARCHITECTURE_REVIEW.md  ARCHITECTURE_REVIEW_KICKOFF.md  IMPLEMENTATION_KICKOFF.md  REFACTORING_GUIDE.md  SGLANG_ANALYSIS.md
.scratch/projects/12-structured-agents-v2-library-study/: CODE_REVIEW.md  CONCEPTUAL_OVERVIEW.md
.scratch/projects/13-xgrammar-and-batching-todo/: RESEARCH_PLANNING_KICKOFF.md  TODO.md
.scratch/projects/14-specialist-runtime-architecture-research/: 00-EXECUTIVE-SUMMARY.md  01-CURRENT-STATE-AND-EVIDENCE.md  02-REQUIREMENTS.md  03-TRACEABILITY.md  04-ARCHITECTURE-OPTIONS.md  05-BACKEND-CAPABILITY-MATRIX.md  06-DURABILITY-AUTHORITY-AND-THREAT-MODEL.md  07-SPIKES-AND-TEST-PLAN.md  08-PHASED-ROADMAP.md  09-DECISIONS-AND-OPEN-QUESTIONS.md  10-IMPLEMENTATION-KICKOFF-PROMPT.md  RESEARCH_REPORT.md
.scratch/projects/15-specialist-runtime-spikes/: RESEARCH_REPORT.md
.scratch/projects/16-ornith-gguf-loader-transforms/: 00-IMPLEMENTATION-GUIDE.md  10-KICKOFF-PROMPT.md  ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md  launch-spike.sh
.scratch/projects/17-llama-cpp-inference-lab/: .gitignore  .stdcxx_dir  .zlib_dir  00-CONCEPT.md  01-INTERROGATION.md  02-DECISIONS.md  03-SPIKE-FINDINGS.md  04-INTERN-CONCEPT-REVIEW.md  05-FUTURE-PARKED.md  06-LLAMACPP-BUILD-WORKFLOW.md  07-GATE1-DOUBLE-ACCEPT.md  08-GATE3-ORNITH-RESTORE.md  09-GATE2-TOKENIZER-EQUIV.md  10-CUDA-BUILD-FINDINGS.md  11-BUILD-SPEED.md  12-XGRAMMAR-API-FINDINGS.md  13-WORKTREE-PROMPTS.md  PLAN.md  README-cffi-bindgen.md  RESEARCH_REPORT.md  build-llamacpp.sh  cffi_smoke_trivial.py  cuda-shell.nix  gate2_tokenizer_equiv.py  gate3_ornith_load.py  gate3_ornith_restore.py  gpu_smoke.py  llama_cffi_build.py  probe_api.py
.scratch/projects/18-persistent-prefix-cache/: PLAN.md
artifacts/head-to-head/20260714T134601Z/: llama_cpp-response.json  performance.json  vllm-essay.txt  vllm-response.json
artifacts/head-to-head/20260714T134655Z/: llama_cpp-essay.txt  llama_cpp-response.json  llama_cpp-thinking.txt  performance.json  vllm-essay.txt  vllm-response.json
artifacts/head-to-head/20260714T134945Z/: llama_cpp-response.json  vllm-essay.txt  (+3 more)
benchmarks/project17/: generate_json_workload.py  json_workload_100.jsonl  json_workload_1000.jsonl  json_workload_manifest.json  run_json_workload.py  schema_registry_v1.json  workload.py
deploy/sglang/native/: CONTAINER_TESTING.md  README.md  devenv.nix  gemma4_gguf_compat.py  nixos-module.nix  pyproject.toml  resolve_gemma4_gguf_config.py  run.sh  serve.sh  sitecustomize.py  test_gemma4_gguf_compat.py  test_serve.sh  verify.sh
deploy/sglang/native-ornith/: README.md  RESEARCH-FINDINGS.md  devenv.nix  nixos-module.nix  ornith_gdn_transforms.py  ornith_gguf_compat.py  ornith_text_model.py  pyproject.toml  resolve_ornith_gguf_config.py  run.sh  serve.sh  sitecustomize.py  test_ornith_gdn_transforms.py  test_serve.sh  verify.sh
deploy/sglang/native/test_requests/: 01_multi_step_reasoning.json  02_multi_turn_followup.json  03_structured_json_schema.json  04_code_debugging.json  05_tool_calling.json  06_long_context_constrained_summary.json  run_all.sh
deploy/sglang/native/test_requests/responses/: 01_multi_step_reasoning.response.json
deploy/tower/: README.md  bootstrap.ps1  enable-ssh.ps1
deploy/vllm/: .env.example  Dockerfile  README.md  bench.py  docker-compose.no-build.yml  docker-compose.yml  entrypoint.sh  profile_tps.py  verify.sh
examples/: benchmark_local.py  ornith_json_grammar.py  soak_grammar.py
src/structured_agents/: __init__.py  agent.py  approval.py  authority.py  config.py  constraint.py  errors.py  plane.py
src/structured_agents_v2/: __init__.py  agent.py  backend.py  capture.py  closed.py  constrained.py  decoder.py  errors.py  executor.py  fleet.py  profile.py
tests/: conftest.py  live_crash_worker.py  test_agent.py  test_approval.py  test_authority.py  test_backend.py  test_capture.py  test_closed.py  test_config.py  test_constrained.py  test_constraint.py  test_decoder.py  test_dual_path_record.py  test_dual_path_runtime.py  test_dual_path_spike.py  test_dual_path_store.py  test_engine.py  test_executor.py  test_fleet.py  test_fornix.py  test_grammar_soak.py  test_live.py  test_llama_core_benchmark.py  test_llama_core_grammar.py  test_llama_core_models.py  test_owned_decode.py  test_plane.py  test_prefix_cache_contracts.py  test_profile.py  test_project17_workload.py  test_wire_shapes.py  test_xgrammar_api_contract.py  typecheck_constraint.py  typecheck_prefix_cache.py
(+398 files in other folders)
