[project]
name = "structured-agents-v2"
version = "0.1.0"
description = "A Python project for structured agents."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "Bullish Design", email = "BullishDesignEngineering@gmail.com" },
]

dependencies = [
  "pydantic>=2.12.5",
  "pydantic-ai>=1.87.0",
  "grail",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "ty>=0.0.40",
  "ruff>=0.5.0",
]
# Optional dev-only constraint compile check. Heavy: pulls torch + CUDA (~2GB).
grammar-check = [
  "xgrammar>=0.2",
]
# Optional: dual-path inference (local ‖ frontier) durable-execution capture via DBOS.
# Pulls DBOS Transact (durable workflows/steps). Keeps the lean core DBOS/Postgres-free.
dual-path = [
  "dbos>=0.26",
]

[tool.uv.sources]
grail = { git = "https://github.com/Bullish-Design/grail.git", rev = "main" }

#[project.urls]
#homepage = "https://github.com/Bullish-Design/structured-agents-v2"
#repository = "https://github.com/Bullish-Design/structured-agents-v2.git"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Tell hatch which package to ship (your code lives in src/structured_agents_v2)
packages = ["src/structured_agents_v2"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "README.md",
#  "SPEC.md",
#  "docs",
  "tests",
  "pyproject.toml",
]

[tool.uv]
# Keep the default behavior; this section is here so you can extend it later if needed.

[tool.pytest.ini_options]
addopts = "-q --cov=structured_agents_v2 --cov-report=term-missing"
testpaths = ["tests"]
markers = [
  "live: hits the real $LLM_BASE_URL server (skipped unless SAV_LIVE=1).",
]

[tool.ty.environment]
python-version = "3.13"

# Optional dev-only dependency (xgrammar) imported behind a gated try/except in
# constrained.py. Scope the unresolved-import suppression to just that file.
[[tool.ty.overrides]]
include = ["src/structured_agents_v2/constrained.py"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

# Optional [dual-path] extra (psycopg, and DBOS in later phases). The dual_path subpackage
# only imports under the extra; suppress unresolved-import for it (it's gated at runtime).
[[tool.ty.overrides]]
include = ["src/structured_agents_v2/dual_path/**"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

