[project]
name = "structured-agents"
version = "0.3.0"
description = "Durable primitives for constrained-agent workflows."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Bullish Design", email = "BullishDesignEngineering@gmail.com" }]
dependencies = [
  "pydantic>=2.13.3",
  "pydantic-ai-slim[openai]>=2.11,<3",
  "dbos>=2.23",
  "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.120",
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "ty>=0.0.46",
  "ruff>=0.11",
]
grammar-check = ["xgrammar>=0.2"]
fornix = []

[project.urls]
homepage = "https://github.com/Bullish-Design/structured-agents-v2"
repository = "https://github.com/Bullish-Design/structured-agents-v2.git"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/structured_agents"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "tests", "pyproject.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
addopts = "-q --strict-markers"
testpaths = ["tests"]
markers = ["live: hits the configured vLLM server (skipped unless SAV_LIVE=1)."]

[tool.ty.environment]
python-version = "3.13"

[[tool.ty.overrides]]
include = ["src/structured_agents/constraint.py"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[[tool.ty.overrides]]
include = ["src/structured_agents/agent.py"]

[tool.ty.overrides.rules]
no-matching-overload = "ignore"

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
